Add sQTLs to gene info page
