# openapi.yaml
@@ -6,7 +6,7 @@ info:
   contact:
     name: Daniel Munro
     x-role: responsible developer
-    email: dan@dmun.ro
+    email: danbmunro@gmail.com
     url: https://danmun.ro
     x-id: https://danmun.ro
 servers:
@@ -19,6 +19,8 @@ tags:
   description: Gene expression data
 - name: eQTL
   description: Data on gene-variant associations
+- name: sQTL
+  description: Data on splice-variant associations
 paths:
   /dyneqtl:
     get:
@@ -273,7 +275,19 @@ paths:
                               expressed:
                                 type: boolean
                                 example: true
+                              testedEqtl:
+                                type: boolean
+                                example: true
                               eqtl:
+                                type: boolean
+                                example: true
+                              altSplice:
+                                type: boolean
+                                example: true
+                              testedSqtl:
+                                type: boolean
+                                example: true
+                              sqtl:
                                 type: boolean
                                 example: true
                         geneId:
@@ -447,6 +461,60 @@ paths:
                           example: chr17:15221388
           x-responseValueType:
           - x-path: singleTissueEqtl[0].geneId
+            x-valueType: https://identifiers.org/ensembl
+  /sqtl:
+    get:
+      tags:
+      - sQTL
+      description: Fetch conditionally independent cis-sQTLs in any tissue for a gene
+      parameters:
+      - name: geneId
+        in: query
+        description: Ensembl gene ID
+        required: true
+        schema:
+          type: string
+          example: ENSRNOG00000021424
+        x-valueType: https://identifiers.org/ensembl
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  eqtl:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        alt:
+                          type: string
+                          example: T
+                        geneId:
+                          type: string
+                          example: ENSRNOG00000021424
+                        geneSymbol:
+                          type: string
+                          example: Cd300lf
+                        phenotypeId:
+                          type: string
+                          example: 10:103673824:103677398:clu_5465_-:ENSRNOG00000021424
+                        pval_beta:
+                          type: number
+                          example: 0.000715545
+                        ref:
+                          type: string
+                          example: C
+                        tissueSiteDetailId:
+                          type: string
+                          example: IL
+                        variantId:
+                          type: string
+                          example: chr10:104378687
+          x-responseValueType:
+          - x-path: sqtl[0].geneId
             x-valueType: https://identifiers.org/ensembl
   /tissueInfo:
     get:
